--- a/_toc.yml
+++ b/_toc.yml
@@ -3,11 +3,13 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
-- file: intro_historia.md
-- file: intro_macro.md
-- file: intro_micro.md
-- file: intro_finance.md
+parts: 
+- caption: Historia
+	chapters:
+	- file: markdown
+	- file: notebooks
+	- file: markdown-notebooks
+	- file: intro_historia.md
+	- file: intro_macro.md
+	- file: intro_micro.md
+	- file: intro_finance.md
